--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,22 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    
+      - uses: actions/checkout@v2
+      
+      
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'
+          include-prerelease: true
+      
+      
+      - name: Build with dotnet
+        run: dotnet build ./aspnetapp.sln --configuration Release      
+        
+############ Sonar Qube ##############          
+          
 #       - name: Set up JDK 11
 #         uses: actions/setup-java@v1
 #         with:
@@ -30,16 +46,8 @@ jobs:
 #         with:
 #           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 #       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#       - uses: actions/checkout@v2
-#       - name: Setup .NET
-#         uses: actions/setup-dotnet@v1
-#         with:
-#           dotnet-version: '6.0.x'
-#           include-prerelease: true
-
-    #  - name: Build with dotnet
- #       run: dotnet build ./aspnetapp.sln --configuration Release
-        
+      
+       
 #       - name: Cache SonarQube packages
 #         uses: actions/cache@v1
 #         with:
@@ -66,15 +74,17 @@ jobs:
 #          .\.sonar\scanner\dotnet-sonarscanner begin /k:"cicd-test-key" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="http://localhost:9000"
 #          dotnet build ./aspnetapp.sln --configuration Release
 #          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+
+############ END Sonar Qube ##############   
      
 #### Build Docker image
-#       - name: Docker build aspnet
-#         shell: pwsh
-#         run: | 
+      - name: Docker build aspnet
+        shell: pwsh
+        run: | 
 
-#          docker build -f "C:\aspnet\Dockerfile" -t remusadvanced/appmod-devops:0.0.${{GITHUB.RUN_NUMBER }} .
-#          docker login -u "${{ secrets.CONTAINER_REPO_USERNAME }}" -p "${{ secrets.CONTAINER_REPO_PASSWORD }}"
-#          docker push remusadvanced/appmod-devops:0.0.${{GITHUB.RUN_NUMBER }}
+         docker build -f "C:\aspnet\Dockerfile" -t remusadvanced/appmod-devops:0.0.${{GITHUB.RUN_NUMBER }} .
+         docker login -u "${{ secrets.CONTAINER_REPO_USERNAME }}" -p "${{ secrets.CONTAINER_REPO_PASSWORD }}"
+         docker push remusadvanced/appmod-devops:0.0.${{ GITHUB.RUN_NUMBER }}
  
      
 #### Create a task definition in AWS ECS 
@@ -82,8 +92,7 @@ jobs:
       - name: Update the task definition
         shell: pwsh
         run: |
-         $temp = '"[{\"portMappings\": [{\"hostPort\": 80,\"protocol\": \"tcp\",\"containerPort\": 80}],\"cpu\": 0, \"memory\": 10,\"image\": \"docker.io/remusadvanced/appmod-devops:0.0.27\",\"name\": \"appmod-cicd-test-ctr\"}]"'
-         aws ecs register-task-definition --runtime-platform operatingSystemFamily="LINUX" --family "appmod-cicd-test" --task-role-arn "arn:aws:iam::069705096352:role/ecsTaskExecutionRole" --execution-role-arn "arn:aws:iam::069705096352:role/ecsTaskExecutionRole" --network-mode "awsvpc" --requires-compatibilities "FARGATE" --cpu 256 --memory 512 --container-definitions '"[{\"portMappings\": [{\"hostPort\": 80,\"protocol\": \"tcp\",\"containerPort\": 80}],\"cpu\": 0, \"memory\": 10,\"image\": \"docker.io/remusadvanced/appmod-devops:0.0.${{secrets.CONTAINER_VERSION}}\",\"name\": \"appmod-cicd-test-ctr\"}]"'
+         aws ecs register-task-definition --runtime-platform operatingSystemFamily="LINUX" --family "appmod-cicd-test" --task-role-arn "arn:aws:iam::069705096352:role/ecsTaskExecutionRole" --execution-role-arn "arn:aws:iam::069705096352:role/ecsTaskExecutionRole" --network-mode "awsvpc" --requires-compatibilities "FARGATE" --cpu 256 --memory 512 --container-definitions '"[{\"portMappings\": [{\"hostPort\": 80,\"protocol\": \"tcp\",\"containerPort\": 80}],\"cpu\": 0, \"memory\": 10,\"image\": \"docker.io/remusadvanced/appmod-devops:0.0.${{ GITHUB.RUN_NUMBER }}\",\"name\": \"appmod-cicd-test-ctr\"}]"'
          
          
          
