--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Docker build aspnet
         shell: pwsh
         run: | 
-         Write-Host "Workspace " ${{ GITHUB_WORKSPACE }}
+         Write-Host "Workspace " ${{ GITHUB.WORKSPACE }}
          docker build -f "${{ GITHUB_WORKSPACE}}\Dockerfile" -t remusadvanced/appmod-devops:0.0.${{GITHUB.RUN_NUMBER }} .
          docker login -u "${{ secrets.CONTAINER_REPO_USERNAME }}" -p "${{ secrets.CONTAINER_REPO_PASSWORD }}"
          docker push remusadvanced/appmod-devops:0.0.${{ GITHUB.RUN_NUMBER }}
