--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
         shell: pwsh
         run: | 
          Write-Host "Workspace " ${{github.workspace}}
-         docker build -f "${{ GITHUB_WORKSPACE}}\Dockerfile" -t remusadvanced/appmod-devops:0.0.${{GITHUB.RUN_NUMBER }} .
+         docker build -f "${{GITHUB.WORKSPACE}}\Dockerfile" -t remusadvanced/appmod-devops:0.0.${{GITHUB.RUN_NUMBER }} .
          docker login -u "${{ secrets.CONTAINER_REPO_USERNAME }}" -p "${{ secrets.CONTAINER_REPO_PASSWORD }}"
          docker push remusadvanced/appmod-devops:0.0.${{ GITHUB.RUN_NUMBER }}
  
