--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,6 +95,13 @@ jobs:
          aws ecs register-task-definition --runtime-platform operatingSystemFamily="LINUX" --family "appmod-cicd-test" --task-role-arn "arn:aws:iam::069705096352:role/ecsTaskExecutionRole" --execution-role-arn "arn:aws:iam::069705096352:role/ecsTaskExecutionRole" --network-mode "awsvpc" --requires-compatibilities "FARGATE" --cpu 256 --memory 512 --container-definitions '"[{\"portMappings\": [{\"hostPort\": 80,\"protocol\": \"tcp\",\"containerPort\": 80}],\"image\": \"docker.io/remusadvanced/appmod-devops:0.0.${{ GITHUB.RUN_NUMBER }}\",\"name\": \"appmod-cicd-test-ctr\"}]"'
          
          
+       #### Update Service in AWS ECS 
+      - name: Update the task definition
+        shell: pwsh
+        run: |    
+         aws ecs update-service --cluster appmod-cicd-test  --service appmod-cicd-srv --task-definition appmod-cicd-test
+         
+         
          
          
          
