--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,18 @@ jobs:
     
       - uses: actions/checkout@v2
       
+############ Dotnet code build ##############                
+#       - name: Setup .NET
+#         uses: actions/setup-dotnet@v1
+#         with:
+#           dotnet-version: '6.0.x'
+#           include-prerelease: true
       
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '6.0.x'
-          include-prerelease: true
       
-      
-      - name: Build with dotnet
-        run: dotnet build ./aspnetapp.sln --configuration Release      
+#       - name: Build with dotnet
+#         run: dotnet build ./aspnetapp.sln --configuration Release      
+
+############ End of dotnet code build ##############          
         
 ############ Sonar Qube ##############          
           
@@ -109,14 +111,11 @@ jobs:
 ############ End of AWS ##############  
 
 ############ Selenium ##############  
-      - name: Run Selenium tests
-        uses: actions/cache@v1
-        with:
-          name: Run Selenium tests
-          shell: pwsh
-          run: |
-            selenium-side-runner -c "goog:chromeOptions.args=[--headless,--nogpu] browserName=chrome" ${{github.workspace}}\selenium\dotnet.side --output-directory=${{github.workspace}}\selenium\results
-      
+      - name: Run Selenium tests       
+        shell: pwsh
+        run: |
+          selenium-side-runner -c "goog:chromeOptions.args=[--headless,--nogpu] browserName=chrome" ${{github.workspace}}\selenium\dotnet.side --output-directory=${{github.workspace}}\selenium\results
+
       
       - name: Publish Report       
         uses: dorny/test-reporter@v1.5.0
