--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,7 @@ jobs:
         uses: dorny/test-reporter@v1.5.0
         with:
           name: Selenium Tests Report
-          path: C:\selenium\dotnet\results\dotnet.json
+          path: C:\selenium\dotnet\results\*.json
           reporter: jest-junit
 
 ############ End of selenium  ##############  
